# python-template-repository

./: LICENSE  README.md  dockerfile  requirements.txt  requirements_test.txt  setup.cfg  setup.py  view_docs.sh
.github/workflows/: main.yml
ci/: build_docs.sh  run_tests.sh
docs/source/: conf.py  index.rst
examplepackage/: example_main.py
examplepackage/example_subpackage/: example_module.py
src/example_package/: example.py
test/: test_example.py
test/example_package/: test_example.py
