[metadata]
# replace with your username:

[flake8]
max-line-length=120

[tool:pytest]
addopts = --flake8
flake8-ignore = E201 E231

[aliases]
test=pytest


 [versioneer]
 VCS = git
 style = pep440
 versionfile_source = exampleproject/_version.py
 versionfile_build = 
 tag_prefix =
 parentdir_prefix =

 
# bug: https://github.com/pypa/packaging-problems/issues/459

# name = example-package-jacob-marlow
# version = 0.0.1
# author = Jacob Marlow
# author_email = author@example.com
# description = A small example package
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

# [options]
# package_dir =
#     = src
# packages = find:
# python_requires = >=3.6

# [options.packages.find]
# where = src
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
#VCS = git
#style = pep440
#versionfile_source =
#versionfile_build =
#tag_prefix =
#parentdir_prefix =

